# struct_error

./: Cargo.toml  README.md
struct_error/: Cargo.toml
struct_error/examples/: basic.rs
struct_error/src/: lib.rs
struct_error/tests/: integration_tests.rs
struct_error_macros/: Cargo.toml
struct_error_macros/src/: error.rs  lib.rs  match_error.rs  registry.rs  sort.rs  throws.rs  united_error.rs  utils.rs
